packages/concerto-cto/test/cto/bad/self-extending-event.bad.cto
namespace com.acme@1.0.0

event Self_Extending extends Self_Extending {
  o String foo optional
}
